# FishDetection

./: .gitignore  FRAME_DIFFERENCING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_EXPLANATION.md  PROJECT_STRUCTURE.md  README.md  analyze.py  analyze_positions.py  apply_bg_subtraction_30_frames.py  pyproject.toml  run.py  test_optimized_frame_diff.py
Results/SimpleTracking/: tracking_data.npz
analysis/: README.md  __init__.py  geometry.py  per_frame_matrices.py  plots.py  positions.py
docs/: ACCURACY_DEGRADATION_ANALYSIS.md  ADAPTIVE_HSV_PIPELINE.md  BACKGROUND_SUBTRACTION_REFACTOR.md  FISH_TRACKING_SUCCESS.md  OPTICAL_FLOW_README.md  PIPELINE_REORGANIZATION.md  README.md  YOLO_TRACKING_README.md
examples/: adaptive_hsv_analysis_no_tolerance.py  complete_pipeline_v2.py  complete_pipeline_v2_columns.py  complete_pipeline_v2_columns_segmented.py  demo_background_subtraction_tracking.py  demo_background_subtractor.py  demo_optical_flow.py  hsv_analysis_10_seconds.py  hsv_analysis_tracking_bg_subtractor.py  hsv_analysis_v2_bg_subtraction.py  optical_flow_video_processor.py  run_optical_flow_pipeline.py  run_segmented_all_segments.py  run_segmented_segment4.py  test_hsv_mask_bg_subtracted.py
examples/pipelines/: README.md  __init__.py
examples/pipelines/base/: __init__.py  utils.py
examples/pipelines/v2_columns/: __init__.py  adaptive_column_limit.py  default_bg.py  segment_bg.py  shared_bg.py  wrapper.py
scripts/: README.md  REORGANIZATION_PLAN.md  SCRIPT_GUIDE.md  check_frame120.py  preprocess_tracked_frames.py  reorganize_pipelines.py  show_bg_subtraction_example.py  show_cell_grid.py  show_custom_grid.py  show_segmentation_options.py
scripts/analysis/: analyze_fish_detection.py  process_preprocessed_canny.py  visualize_yolo_results.py
scripts/custom_grid/: README.md  analyze_fish_tracking.py  base_pipeline.py  pipeline.py  run.py
scripts/default_columns/: README.md  base_pipeline.py  pipeline.py  run.py  utils.py
scripts/half_sectioned/: README.md  base_pipeline.py  pipeline.py  run.py  utils.py
scripts/original_pipeline/: README.md  complete_pipeline_v2.py
scripts/pipelines/: README.md  __init__.py
scripts/pipelines/base/: __init__.py  (+2 more)
scripts/segmented_columns/: README.md  pipeline.py  run.py  run_all_segments.py  run_segment4.py  utils.py
scripts/tests/: test_background_subtractor.py  test_fish_tracker.py  test_optical_flow.py  test_yolo_fish_detection.py  test_yolo_tracking.py
src/fishdetect/: TrackingProgram-Adult-BL-Social-BL-Yellow---Newrig (1).py  TrackingProgram-Adult-BL-Social-BL-Yellow---Newrig.py  TrackingProgram_28fish_500frames.py  __init__.py  balanced_frame_diff_detector.py  bl_social_tracking_coords.py  cli.py  detector.py  enhanced_preprocessing.py  evaluation.py  motion_detector.py  simple_tracking_test.py  video_processor.py
src/fishdetection/: README.md  __init__.py  background_subtractor.py  base_masker.py  base_pipeline.py  grid.py  hsv_masker.py  pipeline.py
src/image_pre/: README.md  __init__.py  compare_preprocessing.py  preprocess_bg_subtracted.py  preprocessor.py
src/processing/: __init__.py  background_subtractor.py  fish_background_subtractor.py  tracking_program_background_subtractor_v2.py
src/tracking_methods/: README.md  __init__.py  config.py  masker_factory.py
tests/: test_analysis_geometry.py  test_per_frame_matrices.py
(+24 files in other folders)
